--- a/java-note/pom.xml
+++ b/java-note/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>java-basic</module>
+        <module>java-spring</module>
+        <module>java-netty</module>
     </modules>
 
     <properties>
